tests/snapshots/skill_generation_tests__generated_datasets_skill_md.snap
---
source: tests/skill_generation_tests.rs
expression: "&datasets_skill.skill_md"
---
---
name: dcx-datasets
description: Use dcx to manage BigQuery datasets via the get, list commands.
---

## When to use this skill

Use when the user wants to:
- get a BigQuery dataset
- list a BigQuery dataset
- show or inspect BigQuery datasets

Do not use for analytics workflows (doctor, evaluate, get-trace) — use dcx-analytics instead.

## Prerequisites

Authentication: `dcx auth login` or set `DCX_PROJECT` / `DCX_TOKEN`.

Requires: `--project-id` (all), `--dataset-id` (some)

## Commands

| Command | Description |
|---------|-------------|
| `dcx datasets get` | Returns the dataset specified by datasetID. |
| `dcx datasets list` | Lists all datasets in the specified project to which the user has been granted the READER dataset role. |

See [references/commands.md](references/commands.md) for flags, constraints, and examples.

## Decision rules

- Use `--dry-run` to preview the API request
- Use `--format table` for visual scanning, `--format json` for piping
- Use `--format json-minified` for agent pipelines (same schema, ~27% fewer tokens)
- Use `datasets list` to discover available datasets
- Use `datasets get` to inspect a specific dataset
