tests/snapshots/skill_generation_tests__generated_models_skill_md.snap
---
source: tests/skill_generation_tests.rs
expression: "&models_skill.skill_md"
---
---
name: dcx-models
description: Use dcx to manage BigQuery models via the get, list commands.
---

## When to use this skill

Use when the user wants to:
- get a BigQuery model
- list a BigQuery model
- show or inspect BigQuery models

Do not use for analytics workflows (doctor, evaluate, get-trace) — use dcx-analytics instead.

## Prerequisites

Authentication: `dcx auth login` or set `DCX_PROJECT` / `DCX_TOKEN`.

Requires: `--project-id` and `--dataset-id`

## Commands

| Command | Description |
|---------|-------------|
| `dcx models get` | Gets the specified model resource by model ID. |
| `dcx models list` | Lists all models in the specified dataset |

See [references/commands.md](references/commands.md) for flags, constraints, and examples.

## Decision rules

- Use `--dry-run` to preview the API request
- Use `--format table` for visual scanning, `--format json` for piping
- Use `--format json-minified` for agent pipelines (same schema, ~27% fewer tokens)
- Use `models list` to discover available models
- Use `models get` to inspect a specific model
